# mda-simulator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  contributing.md  index.md
docs/_static/: example-napari.apng
docs/examples/: napari-micromanager.ipynb  standalone-usage.ipynb
examples/: basic.py  config.cfg  napari-micromanager.py
mda_simulator/: __init__.py  _generators.py
mda_simulator/mmcore/: __init__.py  _mmcore.py
