[metadata]
name = mda_simulator
description = mda simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianhi/mda-simulator
author = Ian Hunt-Isaak, John Russell
author_email = ianhuntisaak@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source Code =https://github.com/ianhi/mda-simulator

[options]
packages = find:
install_requires =
    numpy
    scikit-image
python_requires = >=3.7
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
doc =
    Sphinx>=1.5
    furo
    myst-nb
    sphinx-copybutton
    sphinx-panels
    sphinx-togglebutton
testing =
    nbval
    pytest
    pytest-cov
    tox
    tox-conda

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
